--- a/backend/src/pages/edit-movie.ejs
+++ b/backend/src/pages/edit-movie.ejs
@@ -12,6 +12,15 @@
         <label>Name</label>
         <input type="text" name="name" required />
       </div>
+      <div>
+        <label>Image</label>
+        <input type="text" name="image" required />
+      </div>
+      <div>
+        <label>Description</label>
+        <input type="text" name="description" required />
+      </div>
+      <div><button type="submit">Add Movie</button></div>
     </form>
   </body>
 </html>
