--- a/backend/src/pages/index.ejs
+++ b/backend/src/pages/index.ejs
@@ -7,5 +7,15 @@
   </head>
   <body>
     <h1>Home Page</h1>
+
+    <main>
+      <% movie.forEach(data => {%>
+      <ul>
+        <li>
+          <h1><a href="<%= data.id %>"><%= data.name %></a></h1>
+        </li>
+      </ul>
+      <%})%>
+    </main>
   </body>
 </html>
