--- a/backend/src/pages/movie.ejs
+++ b/backend/src/pages/movie.ejs
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Movie</h1>
+
+    <main>
+      <h1><%= movie.name%></h1>
+      <img src="<%= movie.image %>" alt="<%= movie.name%>" />
+      <p><%= movie.description%></p>
+    </main>
   </body>
 </html>
