--- a/backend/src/pages/movie.ejs
+++ b/backend/src/pages/movie.ejs
@@ -12,6 +12,15 @@
       <h1><%= movie.name%></h1>
       <img src="<%= movie.image %>" alt="<%= movie.name%>" />
       <p><%= movie.description%></p>
+
+      <div>
+        <form action="/delete" method="post">
+          <div>
+            <input type="hidden" value="<%=movie.id%>" name="movieId" />
+            <button>Delete</button>
+          </div>
+        </form>
+      </div>
     </main>
   </body>
 </html>
