edit button and route

--- a/backend/src/pages/movie.ejs
+++ b/backend/src/pages/movie.ejs
@@ -21,6 +21,10 @@
           </div>
         </form>
       </div>
+
+      <div>
+        <a href="/edit-movie/<%=movie.id%>/?edit=true">Edit</a>
+      </div>
     </main>
   </body>
 </html>
